<resources>
    <string name="app_name">Inteligenty Zamek</string>
    <string name="title_activity_register">rejestracja</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="defaultIPSerwer">192.168.8.100</string>
    <string name="SPName">InteligentKeySharedPreferences</string>

    <!-- activity_main  -->
    <string name="icon_SortingAsc">&#xf160;</string>

    <string name="acivity_main_text1">Lista dostępnych zamków do otwarcia</string>
    <string name="activity_main_text2">wyszukaj...</string>
    <string name="activity_main_text3">sortuj</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- activity managment certyfication  -->
    <string name="icon_download_serwer">&#xf0ed;</string>
    <string name="icon_download_file">&#xf15b;</string>
    <string name="activity_managmentCertyfication1">Dodaj Certyfikat</string>
    <string name="activity_managmentCertyfication2">Lista twoich certyfikatów</string>
    <string name="activity_managmentCertyfication3">Wnioskuj o certyfikat</string>
    <string name="activity_managmentCertyfication4">wygeneruj certyfikat dla gościa</string>
    <string name="activity_managmentCertyfication5">Certyfikaty</string>
    <string name="activity_managmentCertyfication6">Dodaj certyfikat</string>
    <string name="activity_managmentCertyfication7">Wgraj z pliku</string>
    <string name="activity_managmentCertyfication8">Pobierz z serwera</string>


    <!-- activity Certificate -->
    <string name="activity_certificate1">Certyfikat</string>
    <string name="activity_certificate2">Ważny w dniach:</string>
    <string name="activity_certificate3">Usuń certyfikat</string>
    <string name="activity_certificate4">Przedłuż certyfikat</string>

    <!-- activity CertificationAsk -->
    <string name="activity_certyficationAsk1">Wnioskuj o certyfikat</string>
    <string name="activity_certyficationAsk2">Wybierz z listy zamek, do którego chcesz wysłać prośbę o wygenerowanie certyfikatu</string>
    <string name="activity_certyficationAsk3">wyszukaj...</string>
    <string name="activity_certyficationAsk4">sortuj</string>



    <!-- activity Settings  -->
    <string name="activity_settings1">Zmień hasło</string>
    <string name="activity_settings2">stare hasło</string>
    <string name="activity_settings3">nowe hasło</string>
    <string name="activity_settings4">zmień</string>
    <string name="activity_settings5">Certyfikat klucza prywatnego</string>
    <string name="activity_settings6">Nazwa właściciela</string>
    <string name="activity_settings7">Nazwa emitenta</string>
    <string name="activity_settings8">Okres ważnośći</string>
    <string name="activity_settings10">Wersja</string>
    <string name="activity_settings11">Numer seryjny</string>
    <string name="activity_settings12">Algorytm Hashujący</string>
    <string name="activity_settings13">Algorytm sygnatury</string>
    <string name="activity_settings14">Klucz publiczny</string>
    <string name="activity_settings15">Wygeneruj nowy klucz prywatny</string>
    <string name="activity_settings16">Adres IP serwera</string>
    <string name="activity_settings17">Zmień</string>


    <!-- activity_login   -->
    <string name="activity_login_text1">Login</string>
    <string name="activity_login_text2">Hasło</string>
    <string name="activity_login_text3">Zaloguj się</string>
    <string name="activity_login_text4">Jeśli nie posiadasz konta zarejestruj się</string>
    <string name="activity_login_text5">Zarejestruj się</string>
    <string name="activity_login_text6">Gość</string>
    <string name="activity_login_text7">&#xf071;</string>
    <string name="activity_login_text8">Błędny login lub hasło</string>
    <string name="activity_login_text9">Adres serwera</string>

    <!-- user wait key list -->
    <string name="userWaitKeyList_text1">Akceptuj</string>
    <string name="userWaitKeyList_text2">Odrzuć</string>

    <!-- activity_user_wait -->
    <string name="activity_user_wait_text1">Lista oczekujących użytkowników na zarejestrowanie</string>
    <string name="activity_user_wait_text2">Wyszukaj...</string>


    <!-- activity_certificat_wait -->
    <string name="activity_certificat_wait_text1">Lista oczekujących certyfikatów na zaakceptowanie</string>
    <string name="activity_certificat_wait_text2">Wyszukaj...</string>
    <string name="activity_certificat_wait_text3">sortuj</string>

    <!-- activity_register   -->
    <string name="activity_register_text1">Login</string>
    <string name="activity_register_text2">Hasło</string>
    <string name="activity_register_text3">Imie</string>
    <string name="activity_register_text4">Nazwisko</string>
    <string name="activity_register_text5">Rejestracja</string>
    <string name="activity_register_text6">Zarejestruj</string>
    <string name="activity_register_text7">&#xf071;</string>
    <string name="activity_register_text8">Popraw czerwone pola</string>
    <string name="activity_register_text9">&#xf06e;</string>
    <string name="activity_register_text10">adres serwera</string>




    <!-- activity admin panel  -->
    <string name="activity_admin_panel1">Historia użycia zamków</string>
    <string name="activity_admin_panel2">Generowanie nowego certyfikatu</string>
    <string name="activity_admin_panel3">Zarządzanie certyfikatami użytkowników</string>
    <string name="activity_admin_panel4">Lista oczekujących uzytkowników do zarejestrowania</string>
    <string name="activity_admin_panel5">Lista oczekujących certyfikatów do zaakceptowania</string>
    <string name="activity_admin_panel_text1">Panel Administracyjny</string>


    <!-- activity user Certyfikation List  -->
    <string name="activity_user_Certyfikation_List1">Lista twoich certyfikatów</string>





    <!-- drawer  -->
    <string name="title_section1">Otwórz kłódke</string>
    <string name="title_section2">Certyfikaty</string>
    <string name="title_section3">Panel Administracyjny</string>
    <string name="title_section4">Ustawienia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string-array name="nav_drawer_items">
        <item>Otwórz kłódke</item>
        <item>Certyfikaty</item>
        <item>Panel Administracyjny</item>
        <item>Ustawienia</item>
        <item>Wyloguj</item>

    </string-array>
    <array name="nav_drawer_icons">
        <!--<item>@drawable/ic_launcher</item>-->


    </array>


    <string-array name="generationCertyficatInAdmin">
        <item>Dla gośćia</item>
        <item>Dla użytkownika</item>
    </string-array>

</resources>
