<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/activity_user_Certyfikation_List1"
            style="@style/_textViewBigstyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_Search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/activity_main_text2"
                android:textColor="@color/color_text_ico"
                style="@style/_editTextStyle" />

            <TextView
                android:id="@+id/textView_sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/activity_main_text3"
                android:textColor="@color/color_text_ico" />

            <TextView
                android:id="@+id/TextView_sortingIco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/icon_SortingAsc" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_border_list" />

        <ListView
            android:id="@+id/listView_userCertyfication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background_list" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_border_list" />

    </LinearLayout>


    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>