<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inteligenty_zamek.app_ik.LoginActivity">


    <TextView
        android:id="@+id/TextView_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/activity_login_text1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/EditText_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:layout_below="@+id/TextView_Login"
        android:layout_alignStart="@+id/TextView_Login"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/TextView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/activity_login_text2"
        android:layout_below="@+id/EditText_login"
        android:layout_alignStart="@+id/EditText_login" />

    <EditText
        android:id="@+id/EditText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_password"
        android:layout_alignStart="@+id/TextView_password"
        android:layout_below="@+id/TextView_password"
        android:layout_marginTop="9dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_text3"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/iptextview"
        android:layout_alignStart="@+id/iptextview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignStart="@+id/button_login"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="21dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/activity_login_text4" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_text5"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:id="@+id/button_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_register"
        android:layout_alignBottom="@+id/button_register"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/button_register"
        android:layout_toRightOf="@+id/button_register"
        android:text="@string/activity_login_text6" />

    <EditText
        android:id="@+id/iptextview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/EditText_password" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adres serwera"
        android:layout_above="@+id/iptextview"
        android:layout_alignStart="@+id/iptextview"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/warning_icologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EditText_login"
        android:layout_alignEnd="@+id/textView40"
        android:layout_marginEnd="17dp"
        android:text="&#xf071;"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/errorlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EditText_login"
        android:layout_toEndOf="@+id/textView40"
        android:text="Niepoprawny login lub hasło"
        android:visibility="invisible" />

</RelativeLayout>
