<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inteligenty_zamek.app_ik.RegisterActivity">


    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_register_text1"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignStart="@+id/TextView1"
        android:layout_below="@+id/TextView1"
        android:layout_marginRight="10dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/activity_register_text2"
        android:layout_below="@+id/editText_Login"
        android:layout_alignLeft="@+id/editText_Login"
        android:layout_alignStart="@+id/editText_Login" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="10dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_text3"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/editText_Password"
        android:layout_alignLeft="@+id/editText_Password"
        android:layout_alignStart="@+id/editText_Password" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="10dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/activity_register_text4"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginRight="10dp"
        android:background="@color/color_background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/TextView1"
        android:layout_marginTop="12dp"
        android:text="@string/activity_register_text5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_text6"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginBottom="14dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_Login"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:text="Login jest już zajęty"
        android:textColor="#ff0000"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_Password"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:text="Hasło niepoprawne"
        android:textColor="#ff0000"/>

</android.widget.RelativeLayout>
