<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/_textViewBigstyle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_managmentCertyfication5"

        android:paddingStart="20dp"

        />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_border_list" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/_textViewBigstyle"
        android:background="@color/color_background_list"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/activity_managmentCertyfication6"

        android:paddingStart="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_list"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/TextView_download_file"
            style="@style/_textViewBigstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:text="@string/icon_download_file"
            />

        <TextView
            android:id="@+id/TextView_download_serwer"
            style="@style/_textViewBigstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="100dp"
            android:text="@string/icon_download_serwer"
             />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_border_list" />

    <ListView
        android:id="@+id/managmentCertyficationListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_list"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_border_list" />


</LinearLayout>



    <!-- The navigation drawer -->


    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


    </android.support.v4.widget.DrawerLayout>