<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->


    <!-- The navigation drawer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/_textViewBigstyle"
            android:text="@string/activity_certificate1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_border_list"
            />

        <TextView
            android:id="@+id/certificateTextViewExpiryData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/_textViewMediumstyle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:id="@+id/certificateTextViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/_textViewMediumstyle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_border_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/_textViewMediumstyle"
            android:layout_marginTop="10dp"
            android:text="@string/activity_certificate2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
             />

        <TextView
            android:id="@+id/certificateTextViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/_textViewMediumstyle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_border_list" />

        <Button
            android:id="@+id/certificateButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_certificate3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/certificateButtonExtend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_certificate4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>